<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.thesystems.cloud</groupId>
    <artifactId>cloud-support</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>Core</module>
        <module>Loader</module>
        <module>CloudNet2</module>
        <module>CloudNet3</module>
        <module>CloudNet3-V2-Emulator</module>
        <module>ReformCloud2</module>
        <module>TestAddon</module>
    </modules>

    <repositories>
        <repository>
            <id>cloudnet-repo</id>
            <url>https://cloudnetservice.eu/repositories</url>
        </repository>
        <repository>
            <id>cloudnet-repo-new</id>
            <url>https://repo.cloudnetservice.eu/repository/releases/de/dytanic/cloudnet/cloudnet-lib/</url>
        </repository>

        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>

        <repository>
            <id>reformcloud-official</id>
            <url>https://repo.reformcloud.systems</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.8</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.15.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-api</artifactId>
            <version>1.15-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>